@@ -1,3 +1,6 @@
+2015-10-16 Andrew Burgess <andrew.burgess@embecosm.com>
+	Make C-g quit browse-kill-ring mode.
+
 2015-05-18 Andrew Burgess <andrew.burgess@embecosm.com>
 	Restore the mode name to "Kill Ring" if the filter regexp is
 	removed.
